--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ resume: true
 resume-external: true
 resume-url: https://google.com/?q=my+resume
 
-url: http://hailey99.github.io
+url: "https://hailey99.github.io"
 # your url: http://USERNAME.github.io
 
 permalink: /:year-:month-:day/:title
@@ -106,7 +106,7 @@ plugins:
   - jekull-paginate
 
 jekyll-mentions:
-    base_url: 
+    base_url:  " "
 
 compress_html:
     ignore:
