--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ name: Hailey Haeun Park
 bio: Every chipmunk needs a bit of sunlight and of course a load of adventures!
 
 # twitter summary info
-description: need to edit-A blog about technology and stuff related
+description: I don't do Twitter.
 
 # if it's an external image, update below for true
 # better with square images
@@ -35,11 +35,11 @@ disqus:
 
 # if you don't have any of social below, comment the line
 facebook: myfacebook
-twitter: mytwitter
+#twitter: mytwitter
 # google: mygoogle
-# instagram: myinstagram
+instagram: myinstagram
 # pinterest: mypinterest
-# linkedin: mylinkedin
+linkedin: mylinkedin
 # youtube: myyoutube
 # spotify: myspotify
 github: mygithub
@@ -48,22 +48,22 @@ github: mygithub
 # stackoverflow: 7044681/mystackoverflow
 # quora: userquora
 # reddit: username
-medium: medium
+# medium: medium
 # vimeo: myvimeo
 # lanyrd: mylanyrd
-email: myemail@gmail.com
+email: mailto: haileyhe01@gmail.com
 
 authors:
     Hailey Haeun Park:
         name: Hailey Haeun Park
-        bio: A Dreamchaser who dares to move forward
+        bio: A digital marketer, data analyst, and dreamchaser.
         external-image: false
         picture: assets/images/hailey.jpg
 
 # do you want a larger site? change the option below
 # options: [normal, large] | default: normal
 # normal = 560px / large = 810px
-width: normal
+width: large
 
 # if you don't need pagination, comment the *paginate* configs below
 # paginate: 5
@@ -77,7 +77,7 @@ about: true
 blog: true
 
 # do you want to show the "read time" of the posts?
-read-time: true
+read-time: false
 
 # do you want to show the "tags" inside the posts?
 show-tags: true
