--- a/_config.yml
+++ b/_config.yml
@@ -35,9 +35,9 @@ disqus:
 
 # if you don't have any of social below, comment the line
 facebook: myfacebook
-linkedin: mylinkedin
-github: mygithub
-instagram: myinstagram
+linkedin: Hailey
+github: hailey99
+instagram: haileyhaeun
 
 authors:
     Hailey Haeun Park:
