--- a/_config.yml
+++ b/_config.yml
@@ -51,8 +51,8 @@ authors:
 width: large
 
 # if you don't need pagination, comment the *paginate* configs below
-paginate: 10
-paginate_path: "blog/:num/"
+#paginate: 10
+#paginate_path: "blog/:num/"
 
 # if you don't need projects, comment the *projects* configs below
 projects: true
