yml에서 한글 못쓰는 듯 . 에러 수정

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # main text of home
-name: 박하은 (Hailey)
+name: Hailey
 bio: Every chipmunk needs a bit of sunlight and of course a load of adventures!
 
 # twitter summary info
