--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # main text of home
-name: Hailey
+name: Hailey Park
 bio: Every chipmunk needs a bit of sunlight and of course a load of adventures!
 
 # twitter summary info
@@ -36,6 +36,7 @@ disqus:
 # if you don't have any of social below, comment the line
 linkedin: hailey-park
 github: hailey99
+instagram: haileypark
 
 authors:
     Hailey Park:
@@ -50,8 +51,8 @@ authors:
 width: large
 
 # if you don't need pagination, comment the *paginate* configs below
-paginate: 5
-paginate_path: "blog/:num/"
+#paginate: 10
+#paginate_path: "blog/:num/"
 
 # if you don't need projects, comment the *projects* configs below
 projects: true
@@ -61,7 +62,7 @@ about: true
 blog: true
 
 # do you want to show the "read time" of the posts?
-read-time: true
+read-time: false
 
 # do you want to show the "tags" inside the posts?
 show-tags: true
